# money-manager-backend-rust

./: Cargo.toml  init.sql
src/: database.rs  main.rs
src/controllers/: transactions.rs  users.rs
src/models/: mod.rs  transactions.rs  users.rs
