[package]
name = "money-manager-backend"
version = "0.1.0"
authors = ["pontakornth <pontakorn61@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-cors = "0.2.0"
bcrypt = "0.7"
