[package]
name = "money-manager-backend"
version = "0.1.0"
authors = ["pontakornth <pontakorn61@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-cors = "0.2.0"
bcrypt = "0.7"
rusqlite = { version = "0.22", features = ["bundled"]}
r2d2 = "0.8.8"
r2d2_sqlite = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"